# imgtag

./: .gitignore  BUDGETS.md  DARWIN.md  IA.md  ORACLE.md  README.md  SWARM.md  TRACKS.md  UNKNOWNS.md  VISION-ADDENDA.md  VISION.md  pyproject.toml
.deify/: b-engine-checkpoint.md  track-improvement-ledger.json  vision.sha256  wave-b-briefs.md
research/: ab-drug-subcats.json  apple-runtimes-note.md  candidates.md  corpus-status.md  datasets.md  eval-drugs.json  eval-nudity-probe.json  eval-safety-personfilter.json  eval-safety-separation.json  eval-violence.json  eval-weapons.json  logistics-log.md  measured-numbers.md  models.md  priorart.md  runtime.md  spike-pecore.md  spike-siglip2.md  tagging.md  track-drugs.md  track-nudity.md  track-people.md  track-safety.md  track-sports.md  track-violence.md  track-weapons.md  violence-models.md
scripts/: _sports_explore.py  ab_drug_subcats.py  build_coco_train2k.py  build_hierarchy.py  build_karpathy_testE.py  build_poison.py  build_tokenizer.py  build_weapons_probe.py  eval_drugs.py  eval_safety.py  eval_safety_separation.py  eval_violence.py  eval_weapons.py  export_nudity_marqo.py  export_pecore.py  fetch_art_proxy.py  fetch_coco_train2k.sh  fetch_datasets.sh  fetch_fullres300.sh  fetch_karpathy_test.sh  fetch_openimages_weapons.py  fetch_photo10k.sh  fetch_unsplash_demo.sh  fetch_yunet.py  filter_safetyprobe_persons.py  patch_weapons_spec.py  train_people_head.py  train_weapons_head.py  verify_corpus.py
sessions_history/: ADAPTING.md  HANDOVER.md  README.md  TRANSCRIPT-GUIDE.md  TRICKS-AND-OPTIMIZATIONS.md
(+88 files in other folders)
