[project]
name = "imgtag"
version = "0.1.0"
description = "Blazing-fast CPU-only semantic image tagging & search over local datasets"
requires-python = ">=3.11"
dependencies = [
  "onnxruntime>=1.20",
  "numpy>=1.26",
  "pillow>=10.3",
  "httpx>=0.27",
  "certifi",
  "xxhash>=3.4",
]

[project.scripts]
imgtag = "imgtag.cli:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "playwright>=1.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imgtag"]
