[project]
name = "imgtag"
version = "0.1.0"
description = "Blazing-fast CPU-only semantic image tagging & search over local datasets"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "onnxruntime>=1.20",
  "numpy>=1.26",
  "pillow>=10.3",
  "httpx>=0.27",
  "certifi",
  "xxhash>=3.4",
]

[project.optional-dependencies]
# ADR-7: HEIC is an OPTIONAL extra. Without it, .heic files are skipped with a named,
# counted, actionable error — never a silent gap in the index.
heic = ["pillow-heif>=0.16"]

[project.scripts]
imgtag = "imgtag.cli:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "playwright>=1.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imgtag"]
